# agent-conversation

./: .env  .gitignore  ASYNC_STTS_IMPLEMENTATION.md  AUDIO_TROUBLESHOOTING.md  Dockerfile  OLLAMA_INTEGRATION.md  README.md  docker-compose.yml  generate_test_audio.py  main.py  pyproject.toml  requirements.txt  test_async_stts.py  test_audio_client.py  test_binary_streaming.py  test_client.html  test_env.py  test_ollama_integration.py  test_vonage_api.py
audio_files/: README.md  test_placeholder.txt
models/: audio.py
routers/: websocket_audio.py
services/: audio_stream.py
